	Fixed plugins loading to show splash icons.
	
	* plugins/message-view/anjuta-message-manager.plugin.in,
	plugins/message-view/plugin.c: Fixed plugin registered name.

	* plugins/message-view/anjuta-message-view.png,
	plugins/sample1/anjuta-sample-plugin.png: Update images.

	* src/Makefile.am, src/anjuta-app.c, src/layout.xml,
	src/main.c: Fixed layout loading.

2004-02-11  Franco Catrin <fcatrin@tuxpan.com>

	* plugins/editor/anjuta-docman.c:
	Use stock close icon on tab close button

2004-02-11  Johannes Schmid <jhs@cvs.gnome.org>
	
	* data/template/Makefile.am
	data/template/language/Makefile.am
	data/template/library/Makefile.am
	data/template/text/Makefile.am
	data/template/project/Makefile.am
	data/template/project/terminal/Makefile.am
	configure.in: Created Makefile to install templates

2004-02-11  Naba Kumar  <naba@gnome.org>

	* plugins/editor/action-callbacks.c,
	plugins/editor/anjuta-document-manager.ui,
	plugins/editor/plugin.c
	plugins/message-view/anjuta-message-manager.ui,
	src/anjuta-actions.h, src/anjuta.ui: Fixed Edit->Goto submenu merging.
	
2004-02-09  Johannes Schmid <jhs@cvs.gnome.org>
	
	* plugins/message-view/*: MessageView plugin is now loaded
	The menu items are still dummies.

2004-02-09  Naba Kumar  <naba@gnome.org>

	* Makefile.am, autogen.sh, configure.in: Added proper gtkdoc
	generation.
	
	* libanjuta/anjuta-preferences.h: Added some documentation.
	
	* libanjuta/anjuta-shell.h: Removed dead codes.
	
	* (removed) manuals/reference/gtkdoc-scangobj,
	manuals/reference/gtkdoc-scangobj.diff,
	manuals/reference/libanjuta/.cvsignore,
	manuals/reference/libanjuta/Makefile.am,
	manuals/reference/libanjuta/README.inline-doc,
	manuals/reference/libanjuta/README.sections,
	manuals/reference/libanjuta/libanjuta-docs.sgml,
	manuals/reference/libanjuta/libanjuta-sections.txt,
	manuals/reference/libanjuta/tmpl/anjuta-children.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-encodings.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-marshal.sgml,